Creado mediante Colaboratory

--- a/Clase_11.ipynb
+++ b/Clase_11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXKidjL2XhAcFOMuj3/4Pf",
+      "authorship_tag": "ABX9TyNAs6eENC8hF0PZMGzaNkzM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,27 +121,37 @@
     {
       "cell_type": "code",
       "source": [
-        "lista=list(range(0,20))\n",
         "def mi_funci(n):\n",
-        "  for n in list(n%2==0):\n",
-        "  print(n)"
+        "    for i in n:\n",
+        "        if i % 2 == 0:\n",
+        "            print(i)\n",
+        "\n",
+        "lista = list(range(0, 20))\n",
+        "mi_funci(lista)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ENJ7YhZjRcqa",
-        "outputId": "5fda7b62-6ef9-4a3d-d135-eae5bc9909af"
+        "outputId": "8dd2f90d-ac24-4189-9e95-dd5e6580ad4e"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-70-bde728483417>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(n)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 3\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n"
           ]
         }
       ]
@@ -149,54 +159,76 @@
     {
       "cell_type": "code",
       "source": [
-        "def mi_funci(i):\n",
-        "  lista= list(range(0,20))\n",
-        "  for i in list if (i%2==0):\n",
-        "    print(lista)"
+        "def mi_funci():\n",
+        "    for i in range(1, 101):\n",
+        "        if i % 2 == 0:\n",
+        "            print(i)\n",
+        "\n",
+        "mi_funci()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
-        },
-        "id": "rDerMpNtNH3U",
-        "outputId": "368fec08-c852-4c88-da56-2e17380e6e55"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-58-49e883d5d75d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for i in list if (i%2==0):\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def mi_funci(i) in range (1,101):\n",
-        "  if (i%2==0):\n",
-        "   print(i)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
+          "base_uri": "https://localhost:8080/"
         },
         "id": "S7xzpNXnNybq",
-        "outputId": "e9082186-626b-48a3-efe8-bfabd89e0b2e"
+        "outputId": "906171c8-2ea8-4305-93ba-6ecf667ffb6d"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-56-c404f76efd41>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def mi_funci(i) in range(1,101):\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n",
+            "20\n",
+            "22\n",
+            "24\n",
+            "26\n",
+            "28\n",
+            "30\n",
+            "32\n",
+            "34\n",
+            "36\n",
+            "38\n",
+            "40\n",
+            "42\n",
+            "44\n",
+            "46\n",
+            "48\n",
+            "50\n",
+            "52\n",
+            "54\n",
+            "56\n",
+            "58\n",
+            "60\n",
+            "62\n",
+            "64\n",
+            "66\n",
+            "68\n",
+            "70\n",
+            "72\n",
+            "74\n",
+            "76\n",
+            "78\n",
+            "80\n",
+            "82\n",
+            "84\n",
+            "86\n",
+            "88\n",
+            "90\n",
+            "92\n",
+            "94\n",
+            "96\n",
+            "98\n",
+            "100\n"
           ]
         }
       ]
@@ -204,30 +236,30 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in range (1,40):\n",
-        "def mi_func(i):\n",
-        "  for i in range(lista(2==0)):\n",
-        "    lista.append(i)\n",
-        "  return(lista)\n",
+        "def mi_func():\n",
+        "    lista = []\n",
+        "    for i in range(1, 40):\n",
+        "        if i % 2 == 0:\n",
+        "            lista.append(i)\n",
         "\n",
-        "  print(i)"
+        "    print(lista)\n",
+        "\n",
+        "mi_func()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IDCrVqxxH2zx",
-        "outputId": "93932e62-b0c4-46ac-cf21-bfe89bfba749"
+        "outputId": "cc5e6b3b-742a-47c8-c25a-605cd03f3c58"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-bb3280647d06>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def mi_func(i):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 1\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38]\n"
           ]
         }
       ]
@@ -356,27 +388,27 @@
     {
       "cell_type": "code",
       "source": [
-        "A=[[1, 2, 3], [4, 5, 6], [7,8,9]]\n",
-        "i= 0\n",
-        "  for j\n",
+        "A = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+        "i = 0\n",
+        "for j in range(len(A[i])):\n",
         "    print(A[i][j])"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
+          "base_uri": "https://localhost:8080/"
         },
         "id": "LhxZTDu_XtY8",
-        "outputId": "563a5a8f-1347-49aa-fb95-853168c70427"
+        "outputId": "a5d8cbb4-1a63-41c1-dc03-69162519ae64"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-90-164a3e3a7b14>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for j\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
           ]
         }
       ]
